force-app/main/default/objects/KimbleOne__DeliveryElement__c/KimbleOne__DeliveryElement__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Delivery Element</label>
    <nameField>
        <label>Delivery Element</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delivery Elements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>