force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__AllowNewCostAdjustments__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AllowNewCostAdjustments__c</fullName>
    <formula>IF( OR(KimbleOne__DeliveryGroup__r.KimbleOne__DeliveryStage__c == null, KimbleOne__Product__r.KimbleOne__ProductDomain__r.KimbleOne__CostGenerationModel__r.KimbleOne__Enum__c == &apos;None&apos;), 
true, 
KimbleOne__DeliveryGroup__r.KimbleOne__DeliveryStage__r.KimbleOne__AllowNewCostAdjustments__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allow New Cost Adjustments</label>
    <type>Checkbox</type>
</CustomField>