force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__Analysis__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Analysis__c</fullName>
    <label>Analysis__c</label>
    <length>100</length>
    <type>Text</type>
</CustomField>