force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__BaselineContractCost__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BaselineContractCost__c</fullName>
    <label>Baseline Contract Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>