force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__BaselineContractMargin__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BaselineContractMargin__c</fullName>
    <formula>IF ( NOT( ISBLANK(KimbleOne__BaselineContractRevenue__c) || KimbleOne__BaselineContractRevenue__c = 0 ),
( KimbleOne__BaselineContractRevenue__c - KimbleOne__BaselineContractCost__c ) / KimbleOne__BaselineContractRevenue__c, NULL )</formula>
    <label>Baseline Contract Margin Pct</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>