force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__BaselineContractMarginAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BaselineContractMarginAmount__c</fullName>
    <formula>IF ( NOT(ISBLANK(KimbleOne__BaselineContractRevenue__c)  || ISBLANK(KimbleOne__BaselineContractCost__c)),KimbleOne__BaselineContractRevenue__c - KimbleOne__BaselineContractCost__c, NULL )</formula>
    <label>Baseline Contract Margin Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>