force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__BaselinedDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BaselinedDate__c</fullName>
    <label>Baselined Date</label>
    <type>Date</type>
</CustomField>