force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__BaselineExpensesContractRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BaselineExpensesContractRevenue__c</fullName>
    <label>Baseline Expenses Contract Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>