force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__BaselineInvCcyContractRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BaselineInvCcyContractRevenue__c</fullName>
    <label>Baseline Inv Ccy Contract Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>