force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__BaselineInvCcyExpensesContractRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BaselineInvCcyExpensesContractRevenue__c</fullName>
    <label>Baseline Inv Ccy Exp Contract Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>