force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__BaselineServicesContractMarginAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BaselineServicesContractMarginAmount__c</fullName>
    <formula>IF ( NOT(ISBLANK(KimbleOne__BaselineServicesContractRevenue__c)  || ISBLANK(KimbleOne__BaselineServicesContractCost__c)),KimbleOne__BaselineServicesContractRevenue__c - KimbleOne__BaselineServicesContractCost__c, NULL )</formula>
    <label>Baseline Services Contract Margin Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>