force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__BaselineServicesContractRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BaselineServicesContractRevenue__c</fullName>
    <label>Baseline Services Contract Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>