force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__BaselineUsage__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BaselineUsage__c</fullName>
    <label>Baseline Usage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>