force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__BillingAccount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BillingAccount__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Billing Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Delivery Elements (Billing Account)</relationshipLabel>
    <relationshipName>DeliveryElements</relationshipName>
    <type>Lookup</type>
</CustomField>