force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__BillingContact__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BillingContact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Delivery Elements</relationshipLabel>
    <relationshipName>DeliveryElements</relationshipName>
    <type>Lookup</type>
</CustomField>