force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__CanDelete__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CanDelete__c</fullName>
    <formula>IF( OR(ISBLANK(KimbleOne__ResourcedActivity__c),KimbleOne__ResourcedActivity__r.KimbleOne__ActivityStatus__r.KimbleOne__Enum__c=&apos;Draft&apos;),&apos;Y&apos;,&apos;N&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CanDelete</label>
    <type>Text</type>
</CustomField>