force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__CanInvoice__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CanInvoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Invoice</label>
    <type>Checkbox</type>
</CustomField>