force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__ClosedPrdCostAdjustmentsTotal__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ClosedPrdCostAdjustmentsTotal__c</fullName>
    <label>Closed Prd Cost Adjustments Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>