force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__ClosedPrdRevAdjustmentsTotal__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ClosedPrdRevAdjustmentsTotal__c</fullName>
    <label>Closed Prd Revenue Adjustments Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>