force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__ContractCost__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ContractCost__c</fullName>
    <formula>KimbleOne__ServicesContractCost__c +  KimbleOne__ExpensesContractCost__c + KimbleOne__OtherContractCost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>