force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__ContractRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ContractRevenue__c</fullName>
    <formula>KimbleOne__ServicesContractRevenue__c + KimbleOne__ExpensesContractRevenue__c + KimbleOne__DiscountRevenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>