force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__CostMilestonesTotalValue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CostMilestonesTotalValue__c</fullName>
    <label>Milestone Costs</label>
    <summarizedField>KimbleOne__CostMilestone__c.KimbleOne__MilestoneValue__c</summarizedField>
    <summaryForeignKey>KimbleOne__CostMilestone__c.KimbleOne__DeliveryElement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>