force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__CostNumberOfPeriods__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CostNumberOfPeriods__c</fullName>
    <label>Z_Obsolete - Number Of Periods</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>