force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__CostUnitsPerPeriod__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CostUnitsPerPeriod__c</fullName>
    <label>Z_Obsolete - Cost Units Per Period</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>