force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__CostUnitType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CostUnitType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cost Unit Type</label>
    <referenceTo>KimbleOne__UnitType__c</referenceTo>
    <relationshipLabel>Delivery Elements (Cost)</relationshipLabel>
    <relationshipName>CostDeliveryElements</relationshipName>
    <type>Lookup</type>
</CustomField>