force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__DeliveryElementAnalysedWith__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DeliveryElementAnalysedWith__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Analysed With</label>
    <referenceTo>KimbleOne__DeliveryElement__c</referenceTo>
    <relationshipLabel>Delivery Elements (Analysed With)</relationshipLabel>
    <relationshipName>DeliveryElementsAnalysedWith</relationshipName>
    <type>Lookup</type>
</CustomField>