force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__DeliveryElementForecastWith__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DeliveryElementForecastWith__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Forecast With</label>
    <referenceTo>KimbleOne__DeliveryElement__c</referenceTo>
    <relationshipLabel>Delivery Elements (Delivery Element)</relationshipLabel>
    <relationshipName>DeliveryElementsForecastWith</relationshipName>
    <type>Lookup</type>
</CustomField>