force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__DeliveryElementOperatedWith__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DeliveryElementOperatedWith__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operated With</label>
    <referenceTo>KimbleOne__DeliveryElement__c</referenceTo>
    <relationshipLabel>Delivery Elements (Operated With)</relationshipLabel>
    <relationshipName>DeliveryElementsOperatedWith</relationshipName>
    <type>Lookup</type>
</CustomField>