force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__DeliveryElementRaisedAgainst__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DeliveryElementRaisedAgainst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Raised Against</label>
    <referenceTo>KimbleOne__DeliveryElement__c</referenceTo>
    <relationshipLabel>Delivery Elements (Raised Against)</relationshipLabel>
    <relationshipName>DeliveryElementsRaisedAgainst</relationshipName>
    <type>Lookup</type>
</CustomField>