force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__DeliveryElementScopedWith__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DeliveryElementScopedWith__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scoped With</label>
    <referenceTo>KimbleOne__DeliveryElement__c</referenceTo>
    <relationshipLabel>Delivery Elements (Scoped With)</relationshipLabel>
    <relationshipName>DeliveryElementsScopedWith</relationshipName>
    <type>Lookup</type>
</CustomField>