force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__EarliestAnnuityStartDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EarliestAnnuityStartDate__c</fullName>
    <label>Earliest Annuity Start Date</label>
    <summarizedField>KimbleOne__Annuity__c.KimbleOne__StartDate__c</summarizedField>
    <summaryForeignKey>KimbleOne__Annuity__c.KimbleOne__DeliveryElement__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>