force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__EarliestAssignmentStartDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EarliestAssignmentStartDate__c</fullName>
    <label>Earliest Assignment Start Date</label>
    <type>Date</type>
</CustomField>