force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__EarliestMilestoneDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EarliestMilestoneDate__c</fullName>
    <label>Earliest Milestone Date</label>
    <summarizedField>KimbleOne__Milestone__c.KimbleOne__MilestoneDate__c</summarizedField>
    <summaryForeignKey>KimbleOne__Milestone__c.KimbleOne__DeliveryElement__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>