force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__EarliestPayableItemDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EarliestPayableItemDate__c</fullName>
    <label>Earliest Payable Item Date</label>
    <type>Date</type>
</CustomField>