force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__EarliestReceivableItemDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EarliestReceivableItemDate__c</fullName>
    <label>Earliest Receivable Item Date</label>
    <type>Date</type>
</CustomField>