force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__ExpectedContractRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpectedContractRevenue__c</fullName>
    <label>Expected Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>