force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__ExpectedUsage__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpectedUsage__c</fullName>
    <label>Expected Usage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>