force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__ExpensesContractRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpensesContractRevenue__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Expenses Contract Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>