force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__ExpensesCost__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpensesCost__c</fullName>
    <formula>KimbleOne__ResourcedActivity__r.KimbleOne__ForecastExpenseCost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expenses Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>