force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__ExpensesNotionalRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpensesNotionalRevenue__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Expenses Notional Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>