force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__ExpensesRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpensesRevenue__c</fullName>
    <formula>KimbleOne__ResourcedActivity__r.KimbleOne__ForecastExpenseRevenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expenses Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>