force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__ExpensesRevenueAdjustmentsTotal__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpensesRevenueAdjustmentsTotal__c</fullName>
    <label>Expenses Revenue Adjustments Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>