force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__HasContractRevenueCost__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__HasContractRevenueCost__c</fullName>
    <formula>OR(KimbleOne__DeliveryElementScopedWith__c = NULL, KimbleOne__DeliveryElementOperatedWith__c = NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Contract Revenue or Cost</label>
    <type>Checkbox</type>
</CustomField>