force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__IncludeInDeliveryGroupRollup__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IncludeInDeliveryGroupRollup__c</fullName>
    <formula>IF (ISBLANK(KimbleOne__Proposal__c), true, KimbleOne__ProbabilityCodeEnum__c == &apos;P1&apos;)</formula>
    <label>Include In Delivery Group Rollup</label>
    <type>Checkbox</type>
</CustomField>