force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__InternalRevenueBehaviourRule__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InternalRevenueBehaviourRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Revenue Behaviour Rule</label>
    <referenceTo>KimbleOne__InternalRevenueBehaviourRule__c</referenceTo>
    <relationshipLabel>Delivery Elements</relationshipLabel>
    <relationshipName>DeliveryElements</relationshipName>
    <type>Lookup</type>
</CustomField>