force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__InvCcyClosedPrdExpRevAdjustmentsTotal__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvCcyClosedPrdExpRevAdjustmentsTotal__c</fullName>
    <label>Closed Prd Exp Rev Adjustments Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>