force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__InvoicingCcyExpectedContractRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingCcyExpectedContractRevenue__c</fullName>
    <label>Expected Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>