force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__InvoicingCcyExpensesInvoiceableAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingCcyExpensesInvoiceableAmount__c</fullName>
    <label>Expenses Invoiceable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>