force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__InvoicingCcyExpensesRevAdjustmentsTotal__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingCcyExpensesRevAdjustmentsTotal__c</fullName>
    <label>Inv Ccy Expenses Rev Adjustments Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>