force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__InvoicingCcyServicesInvoiceableAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingCcyServicesInvoiceableAmount__c</fullName>
    <label>Services Invoiceable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>