force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__InvoicingCurrencyContractRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingCurrencyContractRevenue__c</fullName>
    <formula>KimbleOne__InvoicingCurrencyServicesContractRevenue__c + KimbleOne__InvoicingCurrencyExpensesContractRevenue__c + KimbleOne__InvoicingCurrencyDiscountRevenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoicing Currency Contract Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>