force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__InvoicingCurrencyCreditRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingCurrencyCreditRevenue__c</fullName>
    <label>Credit Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>