force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__InvoicingCurrencyExpensesRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingCurrencyExpensesRevenue__c</fullName>
    <formula>KimbleOne__ResourcedActivity__r.KimbleOne__InvoicingCurrencyForecastExpenseRevenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>InvoicingCurrencyExpensesRevenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>