force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__InvoicingCurrencyMilestonesTotal__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingCurrencyMilestonesTotal__c</fullName>
    <label>Invoicing Ccy Milestones Total</label>
    <summarizedField>KimbleOne__Milestone__c.KimbleOne__InvoicingCurrencyMilestoneValue__c</summarizedField>
    <summaryForeignKey>KimbleOne__Milestone__c.KimbleOne__DeliveryElement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>