force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__InvoicingCurrencyPeriodRevenuesTotal__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingCurrencyPeriodRevenuesTotal__c</fullName>
    <label>Invoicing Ccy Period RevenuesTotal</label>
    <summarizedField>KimbleOne__PeriodRevenue__c.KimbleOne__InvoicingCurrencyForecastRevenue__c</summarizedField>
    <summaryForeignKey>KimbleOne__PeriodRevenue__c.KimbleOne__DeliveryElement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>