force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__InvoicingCurrencyRevenueCap__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingCurrencyRevenueCap__c</fullName>
    <label>Invoicing Currency Revenue Cap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>