force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__InvoicingCurrencyServicesContractRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingCurrencyServicesContractRevenue__c</fullName>
    <label>InvoicingCurrencyServicesContractRevenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>