force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__InvoicingCurrencyUsageRevenues__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingCurrencyUsageRevenues__c</fullName>
    <formula>KimbleOne__ResourcedActivity__r.KimbleOne__InvoicingCurrencyForecastRevenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoicing Ccy Usage Revenues</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>