force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__IsRateOverridden__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsRateOverridden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Rate Overridden</label>
    <type>Checkbox</type>
</CustomField>