force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__LatestAnnuityEndDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__LatestAnnuityEndDate__c</fullName>
    <label>Latest Annuity End Date</label>
    <summarizedField>KimbleOne__Annuity__c.KimbleOne__EndDate__c</summarizedField>
    <summaryForeignKey>KimbleOne__Annuity__c.KimbleOne__DeliveryElement__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>