force-app/main/default/objects/KimbleOne__DeliveryElement__c/fields/KimbleOne__LatestAssignmentEndDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__LatestAssignmentEndDate__c</fullName>
    <label>Latest Assignment End Date</label>
    <type>Date</type>
</CustomField>